# dbt-lens

./: Makefile  pyproject.toml
dbt_lens/: __init.py__  cli.py  config.py
dbt_lens/core/: catalog.py  coverage.py  diff.py  manifest.py
dbt_lens/utils/: git_utils.py  io_utils.py
