[tool.poetry]
name = "dbt-lens"
version = "0.1.0"
description = "Test coverage for dbt projects with clarity and insight"
authors = ["Adeeb R <adeeb.armalite@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/armalite/dbt-lens"
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
typer = ">=0.4,<1"

[tool.poetry.group.dev.dependencies]
black = { version = "==24.2.0", python = ">=3.8" }
isort = { version = "==5.13.2", python = ">=3.8" }
pre-commit = { version = "^3.6.2", python = ">=3.9" }
tox = { version = "^4", python = "^3.7" }
tomli = { version = "*", python = "^3.7" }
typing-extensions = { version = "*", python = "^3.7" }
colorama = { version = "*", python = "^3.7" }

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-docker = "^2"
dbt-core = { version = "~1.8.0", python = "^3.8" }
dbt-postgres = { version = "~1.8.0", python = "^3.8" }
importlib-metadata = { version = "*", python = "^3.8" }

[tool.poetry.scripts]
dbtlens = "dbt_lens.cli:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
